feat(auth): unify authority mapping and refactor for testability
Refactored the authentication layer to centralize bank identity resolution
and authority mapping. This ensures consistent security checks across OIDC,
OAuth2, and JWT-based authentication flows.

Core Changes:
- AuthorityMappingService: Introduced `MappingResult` DTO and renamed
  mapping method to `mapAuthoritiesWithContext`. This ensures bank status
  (ACTIVE/DRAFT) and issuer normalization are applied consistently.
- CustomOAuth2UserService & CustomOidcUserService: Extracted enrichment
  logic into `enrichUser` methods. This decouples the business logic from
  the Spring Security `super.loadUser()` network calls, allowing for
  reliable unit testing without complex mocking/spying of parent classes.
- JwtAuthConverter: Updated to use the new mapping method to ensure
  stateless Bearer tokens respect bank configuration and logging requirements.

Testing & Infrastructure:
- Updated `CustomOAuth2UserServiceTest` and `CustomOidcUserServiceTest`
  to test the enrichment methods directly, fixing previous issues with
  null attributes and missing debug hits.
- Improved `AuthorityMappingServiceTest` coverage for `azp` and `aud`
  claim extraction (including list-based audiences).
- Docker: Updated `Dockerfile` and `docker-compose.yml` to support
  build-time proxies and optimized Gradle dependency caching using
  a custom proxy-aware wrapper.

Security:
- Enforced strict Client ID (azp/aud) requirements across all flows.
- Automated Bank ID enrichment in the `OAuth2User` attribute map for
  easier session access.